--- a/chatroom/Cargo.toml
+++ b/chatroom/Cargo.toml
@@ -3,6 +3,12 @@ name = "chatroom"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[[bin]]
+name = "chatroom"
+required-features = ["chatroom"]
 
 [dependencies]
+anyhow = "1"
+libp2p = { version = "0.46",  features = ["tcp-tokio"] }
+tokio = { version = "1.19", features = ["full"] }
+futures = "0.3.1"
