--- a/ping/Cargo.toml
+++ b/ping/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
-name = "libp2p-demo-rs"
+name = "ping"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[[bin]]
+name = "ping"
 
 [dependencies]
 libp2p = "0.46"
