--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,14 @@
+[package]
+name = "p2p"
+version = "0.1.0"
+edition = "2021"
+
 [workspace]
-members = [
-    "ping","chatroom","distributed-kv-store"
-]
+members = ["ping", "chatroom", "distributed-kv-store"]
+
+
+[dependencies]
+tokio = { version = "1.19", features = ["full"] }
+ping = {path = "ping"}
+chatroom = {path = "chatroom"}
+distributed-kv-store = {path = "distributed-kv-store"}
