--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,15 @@
 [package]
-name = "p2p"
+name = "p2p-rs"
 version = "0.1.0"
 edition = "2021"
 
 [workspace]
 members = ["ping", "chatroom", "distributed-kv-store"]
+
+[features]
+ping = []
+kv = []
+chatroom = []
 
 
 [dependencies]
