--- a/ping/Cargo.toml
+++ b/ping/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2021"
 [dependencies]
 libp2p = "0.46"
 tokio = { version = "1.19", features = ["full"] }
+tracing = "0.1"
+tracing-subscriber = "0.3"
