--- a/chatroom/Cargo.toml
+++ b/chatroom/Cargo.toml
@@ -7,4 +7,6 @@ edition = "2021"
 anyhow = "1"
 libp2p = { version = "0.46",  features = ["tcp-tokio"] }
 tokio = { version = "1.19", features = ["full"] }
+tracing = "0.1"
+tracing-subscriber = "0.3"
 futures = "0.3.1"
