--- a/distributed-kv-store/Cargo.toml
+++ b/distributed-kv-store/Cargo.toml
@@ -9,3 +9,5 @@ anyhow = "1"
 libp2p = { version = "0.46",  features = ["tcp-tokio"] }
 tokio = { version = "1.19", features = ["full"] }
 futures = "0.3.1"
+tracing = "0.1"
+tracing-subscriber = "0.3"
