--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ tower-http = { version = "0.3.0", features = ["fs", "trace"] }
 futures = "0.3.1"
 tracing = "0.1"
 tracing-subscriber = "0.3"
+async-trait = "0.1.57"
