--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,10 @@ futures = "0.3.1"
 tracing = "0.1"
 tracing-subscriber = "0.3"
 async-trait = "0.1.57"
+
+
+[profile.release] 
+strip = "debuginfo"
+opt-level = 'z'
+codegen-units = 1
+lto = true
