--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,19 +3,13 @@ name = "p2p-rs"
 version = "0.1.0"
 edition = "2021"
 
-[workspace]
-members = ["ping", "chatroom", "distributed-kv-store","distributed-fs"]
-
-[features]
-ping = []
-dkv = []
-chatroom = []
-dfs = []
 
 
 [dependencies]
+libp2p = { version = "0.46",  features = ["tcp-tokio"] }
 tokio = { version = "1.19", features = ["full"] }
-ping = {path = "ping"}
-chatroom = {path = "chatroom"}
-distributed-kv-store = {path = "distributed-kv-store"}
-distributed-fs = {path = "distributed-fs"}
+futures = "0.3.1"
+clap = {version = "3.1.6", features = ["derive"]}
+async-trait = "0.1"
+tracing = "0.1"
+tracing-subscriber = "0.3"
