--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "p2p-rs"
 version = "0.1.0"
 edition = "2021"
 
+[[bin]]
+name = "hearsay"
+path = "src/main.rs"
+
 [dependencies]
 anyhow = "1"
 libp2p = { version = "0.46",  features = ["tcp-tokio"] }
